<resources>
    <string name="app_name">6Keeper</string>
    <string name="about_us_version">Version 1.0</string>
    <string name="about_us_about">
        SixKeeper is a password manager application that will help users save and manage their
        accounts and passwords in various platforms. It provides convenient access to saved
        passwords to not put mental stress in trying to remember all complicated passwords that the
        user needs. It provides automated features to simplify cyber security for users. It is also
        capable of assessing and suggesting passwords to mitigate risks and increase security.
    </string>
    <string name="add_account_add">Add</string>
    <string name="add_account_app">Application (Optional)</string>
    <string name="add_account_application">Application</string>
    <string name="add_account_credential_1">Credential Field</string>
    <string name="add_account_desc">Description (Optional)</string>
    <string name="add_account_exclude_system_apps"><u>Exclude system apps</u></string>
    <string name="add_account_favorites">Appear in Favorites</string>
    <string name="add_account_include_system_apps"><u>Include system apps</u></string>
    <string name="add_account_title">Add New Account</string>
    <string name="add_account_name">Name</string>
    <string name="add_account_new_account_alert_existing">
        Account name is already existing
    </string>
    <string name="add_account_select_app">Select App</string>
    <string name="add_account_website">Website URL</string>
    <string name="add_account_website_opt">Website URL (Optional)</string>
    <string name="accounts_categories">Categories</string>
    <string name="accounts_category_name">Category Name</string>
    <string name="accounts_edit_category">Edit Category</string>
    <string name="accounts_delete_category">Delete Category</string>
    <string name="accounts_new_category">New Category</string>
    <string name="accounts_new_category_mes">New category added!</string>
    <string name="accounts_new_category_alert_existing">
        Category name is already existing
    </string>
    <string name="auto_lock_enter_master_pin">Welcome Back</string>
    <string name="auto_lock_login_mes">
        You are inactive for set amount of time based on the Auto Lock Timer
    </string>
    <string name="confirm_confirm_action">Confirm Action with Master PIN</string>
    <string name="confirm_credentials_confirm">Confirm Deactivation</string>
    <string name="create_master_pin_desc">
        Master PIN is used for subsequent login and confirmation of actions. <b>Note: A digit
        cannot be used for more than two (2) times.</b>
    </string>
    <string name="create_master_pin_not_start_with_0">Master PIN should not start with 0</string>
    <string name="create_new_acc_alert_message">
        Returning to previous page will discard data. Continue?
    </string>
    <string name="create_new_acc_message">
        The application will restart after (finishing) registration. Continue creating the account?
    </string>
    <string name="create_new_acc_note">
        Note: Once you click register, existing account and other saved data in the app will be
        removed.
    </string>
    <string name="create_new_acc_p1_title"><b>Information (1/3)</b></string>
    <string name="create_new_acc_p1_note">
        Note: Please make sure that the First Name, Last Name and Birth Date fields are correct.
        These can only be changed once.
    </string>
    <string name="create_new_acc_p3_title"><b>Account (2/3)</b></string>
    <string name="create_new_acc_p4_title"><b>Master PIN and Confirm (3/3)</b></string>
    <string name="create_new_acc_p4_agree_to_terms">
        I agree to the Terms and Conditions, and Privacy Policy.
    </string>
    <string name="create_new_acc_p4_agree_to_terms_mes">
        Please read and agree to terms and conditions
    </string>
    <string name="create_new_acc_p4_master_pin_mes">Please setup a Master PIN</string>
    <string name="create_new_acc_p4_register">Register</string>
    <string name="create_new_acc_success">Registered successfully!</string>
    <string name="dashboard_action_log">Action Log</string>
    <string name="dashboard_analytics">Analytics</string>
    <string name="dashboard_duplicate_passwords_mes">No duplicate passwords</string>
    <string name="dashboard_num_of_accounts">Accounts</string>
    <string name="dashboard_num_of_categories">Categories</string>
    <string name="dashboard_num_of_deleted_accounts">Accounts in Recycle Bin</string>
    <string name="dashboard_num_of_deleted_passwords">Deleted Passwords in Recycle Bin</string>
    <string name="dashboard_num_of_favorites">Favorite Accounts</string>
    <string name="dashboard_num_of_platforms">Platforms</string>
    <string name="dashboard_num_of_saved_pass">Saved Passwords</string>
    <string name="dashboard_old_passwords_mes">No old passwords</string>
    <string name="dashboard_security_score"><b>Security Score</b></string>
    <string name="dashboard_summary">Summary</string>
    <string name="dashboard_weak_passwords_mes">No weak passwords</string>
    <string name="dashboard_old_passwords">Old Passwords</string>
    <string name="dashboard_duplicate_passwords">Duplicate Passwords</string>
    <string name="dashboard_weak_passwords">Weak Passwords</string>
    <string name="email_verification_email_sent">Email Sent</string>
    <string name="email_verification_verify_email">Verify Email</string>
    <string name="fingerprint_authentication_failed">Authentication failed</string>
    <string name="fingerprint_enable_lock_screen">
        Please enable lock screen security in the settings of your device
    </string>
    <string name="fingerprint_enable_permission">Please enable the fingerprint permission</string>
    <string name="fingerprint_not_configured">
        No fingerprint configured. Please register at least one fingerprint in the settings of your
        device
    </string>
    <string name="fingerprint_not_supported">
        Your device does not support fingerprint authentication
    </string>
    <string name="forgot_credentials_mes">Cancel reset?</string>
    <string name="forgot_credentials_restart_mes">
        You will be prompted to the start again. Go back?
    </string>
    <string name="reset_master_pin_alert">Do you want to reset master pin?</string>
    <string name="reset_master_pin_mes">Master PIN was reset!</string>
    <string name="reset_master_pin_title">Reset Master PIN</string>
    <string name="reset_master_pin_not_the_same">
        New Master PIN should not be the same as the recent Master PIN
    </string>
    <string name="reset_password_alert">Do you want to reset password?</string>
    <string name="reset_password_mes">Password was reset!</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="security_question_confirm">Confirm</string>
    <string name="security_question_invalid">Entered information are incorrect!</string>
    <string name="security_question_mes">
        Please provide the following information to confirm.
    </string>
    <string name="security_question_reset">Reset</string>
    <string name="login_already_logged_in">The account is logged in on another device</string>
    <string name="login_deactivated">
        Cannot find account. It is either removed, deactivated, or not existing.
    </string>
    <string name="login_enter_credentials">Please enter your credentials</string>
    <string name="login_forgot_pass"><u>Forgot Password?</u></string>
    <string name="login_import_data"><u>Import Data</u></string>
    <string name="login_import_data_title">Import Data</string>
    <string name="login_invalid_credentials">Invalid credentials!</string>
    <string name="many_about_us">About</string>
    <string name="many_accounts">Accounts</string>
    <string name="many_contact_us">Contact Us</string>
    <string name="many_dashboard">Dashboard</string>
    <string name="many_four">4</string>
    <string name="many_help">FAQS</string>
    <string name="many_logout">Logout</string>
    <string name="many_password_generator">Password Generator</string>
    <string name="many_privacy_policy_bold"><b>Privacy Policy</b></string>
    <string name="many_recycle_bin">Recycle Bin</string>
    <string name="many_settings">Settings</string>
    <string name="many_terms_conditions">Terms and Conditions</string>
    <string name="pass_generator_include">Include:</string>
    <string name="pass_generator_lowercase">Lowercase Alphabets (a–z)</string>
    <string name="pass_generator_minus">-</string>
    <string name="pass_generator_number">Numbers (0–9)</string>
    <string name="pass_generator_plus">+</string>
    <string name="pass_generator_uppercase">Uppercase Alphabets (A–Z)</string>
    <string name="pass_generator_special_char">Special Characters</string>
    <string name="privacy_communication_content">
        We may use your personal information to contact you with marketing or promotional materials
        and other information that you might need to know.
    </string>
    <string name="privacy_changes_content_1">
        This Privacy Policy is effective as of August 31, 2021 and will remain in effect except
        with respect to any changes in its provisions in the future, which will be in effect
        immediately after being posted on the application.
    </string>
    <string name="privacy_changes_content_2">
        We reserve the right to update or change our Privacy Policy at any time and you should check
        this Privacy Policy periodically. Your continued use of the service and application after we
        post any modifications to the Privacy Policy on this page will constitute your
        acknowledgment of the modifications and your consent to abide and be bound by the modified
        Privacy Policy.
    </string>
    <string name="privacy_changes_content_3">
        If we make any material changes to this Privacy Policy, we will notify you either through
        the email address you have provided us, or by placing a prominent notice on our application.
    </string>
    <string name="privacy_content_1">
        This document informs you of our policies regarding the collection, use and disclosure of
        Personal Information we receive from users of the application.
    </string>
    <string name="privacy_content_2">
        We use your Personal Information only for providing and improving the application. By using
        the application, you agree to the collection and use of information in accordance with this
        policy.
    </string>
    <string name="privacy_information_content">
        While using our application, we may ask you to provide us with certain personally
        identifiable information that can be used to contact or identify you. Personally
        identifiable information may include but is not limited to your name and other personal
        details.
    </string>
    <string name="privacy_security_content">
        The security of your personal information is important to us but remember that no method of
        transmission over the Internet, or method of electronic storage, is 100% secure. While we
        strive to use acceptable means to protect your personal information.
    </string>
    <string name="privacy_changes_title"><b>Changes To This Privacy Policy</b></string>
    <string name="privacy_communication_title"><b>Communications</b></string>
    <string name="privacy_information_title"><b>Information Collection and Use</b></string>
    <string name="privacy_last_update">Last updated: August 31, 2021</string>
    <string name="privacy_security_title"><b>Security</b></string>
    <string name="settings_auto_lock_timer_instruction">
        Timer should be or between 5 sec and 30 sec.
    </string>
</resources>