<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context=".PrivacyPolicyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbarThumbVertical="@null"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="30dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gPrivacyVertical07"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".07" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gPrivacyVertical36"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".36" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gPrivacyVertical64"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".64" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gPrivacyVertical93"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".93" />

            <ImageView
                android:id="@+id/ivPrivacyHeadIcon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_terms_and_conditions_light_black"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical64"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical36"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvPrivacyTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:text="@string/many_privacy_policy_bold"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/ivPrivacyHeadIcon" />

            <TextView
                android:id="@+id/tvPrivacyLastUpdate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:text="@string/privacy_last_update"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyTitle" />

            <TextView
                android:id="@+id/tvPrivacyContent1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:text="@string/privacy_content_1"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyLastUpdate"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvPrivacyContent2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:text="@string/privacy_content_2"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyContent1"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvPrivacyInformationTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="27dp"
                android:text="@string/privacy_information_title"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyContent2" />

            <TextView
                android:id="@+id/tvPrivacyInformationContent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:text="@string/privacy_information_content"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyInformationTitle"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvPrivacyCommunicationTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="27dp"
                android:text="@string/privacy_communication_title"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyInformationContent" />

            <TextView
                android:id="@+id/tvPrivacyCommunicationContent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:text="@string/privacy_communication_content"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyCommunicationTitle"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvPrivacySecurityTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="27dp"
                android:text="@string/privacy_security_title"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyCommunicationContent" />

            <TextView
                android:id="@+id/tvPrivacySecurityContent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:text="@string/privacy_security_content"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacySecurityTitle"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvPrivacyChangesTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="27dp"
                android:text="@string/privacy_changes_title"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacySecurityContent" />

            <TextView
                android:id="@+id/tvPrivacyChangesContent1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:text="@string/privacy_changes_content_1"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyChangesTitle"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvPrivacyChangesContent2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:text="@string/privacy_changes_content_2"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyChangesContent1"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tvPrivacyChangesContent3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="21dp"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="3dp"
                android:text="@string/privacy_changes_content_3"
                app:layout_constraintEnd_toStartOf="@+id/gPrivacyVertical93"
                app:layout_constraintStart_toStartOf="@+id/gPrivacyVertical07"
                app:layout_constraintTop_toBottomOf="@+id/tvPrivacyChangesContent2"
                tools:targetApi="o" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>