<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="?dialogPreferredPadding"
    android:paddingEnd="?dialogPreferredPadding">

    <TextView
        android:id="@+id/tvAutoLockTimerInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?dialogPreferredPadding"
        android:text="@string/settings_auto_lock_timer_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acbAutoLockTimerMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:stateListAnimator="@null"
        android:text="@string/pass_generator_minus"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAutoLockTimerLength"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAutoLockTimerLength" />

    <TextView
        android:id="@+id/tvAutoLockTimerLength"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="?dialogPreferredPadding"
        android:layout_marginEnd="12dp"
        android:background="@drawable/layout_edit_text"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/acbAutoLockTimerPlus"
        app:layout_constraintStart_toEndOf="@+id/acbAutoLockTimerMinus"
        app:layout_constraintTop_toBottomOf="@+id/tvAutoLockTimerInstruction" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acbAutoLockTimerPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:stateListAnimator="@null"
        android:text="@string/pass_generator_plus"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAutoLockTimerLength"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvAutoLockTimerLength" />

</androidx.constraintlayout.widget.ConstraintLayout>